# aoc_2024

./: Cargo.toml  README.md
src/: main.rs
src/days/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/utils/: mod.rs
